Fixed the problem with numbers that do not fit in the paragraph

--- a/Style.css
+++ b/Style.css
@@ -15,7 +15,7 @@ h1{
 	padding: 5px;
 }
 p.number {
-	width: 50px;
+	width: 60px;
 	height: 25px;
 	display: inline-block;
 	background-color: #DC5B21;
